--- a/Infrastructure-Code/.circleci/config.yml
+++ b/Infrastructure-Code/.circleci/config.yml
@@ -1,13 +1,25 @@
+jobs:
+  verify-install:
+    executor: azure-cli/default
+    steps:
+      - when:
+        condition: $BUILD_ENV
+        steps:
+          - azure-cli/install
+          - run:
+            command: az -v
+            name: Verify Azure CLI is installed
+
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 # Use a package of configuration called an orb.
 orbs:
   # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
+  azure-cli: circleci/azure-cli@1.0.0
 # Orchestrate or schedule a set of jobs
 workflows:
   # Name the workflow "welcome"
-  welcome:
+  code-deploy:
     # Run the welcome/run job in its own container
     jobs:
-      - welcome/run
+      - verify-install
