--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,19 +4,12 @@ jobs:
     steps:
       - azure-cli/install
       - run:
-        command: az -v
-        name: Verify Azure CLI is installed
-
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-# Use a package of configuration called an orb.
+          command: az -v
+          name: Verify Azure CLI is installed
 orbs:
-  # Declare a dependency on the welcome-orb
   azure-cli: circleci/azure-cli@1.0.0
-# Orchestrate or schedule a set of jobs
+version: 2.1
 workflows:
-  # Name the workflow "welcome"
-  code-deploy:
-    # Run the welcome/run job in its own container
+  example-workflow:
     jobs:
       - verify-install
