--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,20 +14,13 @@ jobs:
           steps:
             - when:
                 condition: 
-                  equal: [ Dev, << parameters.should_build >> ]
+                  equal: [ Dev, << parameters.env_build >> ]
                 steps:
                   - azure-cli/login-with-service-principal
                   - run:
                       command: az resource list
                       name: List resources of tenant stored as `AZURE_SP_TENANT` env var for Dev environment
-            - when:
-                condition:
-                  equal: [ SIT, << parameters.env_build >> ]          
-                steps:
-                  - azure-cli/login-with-service-principal
-                  - run:
-                      command: az resource list
-                      name: List resources of tenant stored as `AZURE_SP_TENANT` env var for SIT environment
+
 
 orbs:
   azure-cli: circleci/azure-cli@1.0.0
