--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ jobs:
         type: string
         default: ""        
     steps:
+      - run: echo << parameters.should_build >>
+      - run: echo $BUILD_ENV
       - when:
           condition: << parameters.should_build >>        
           steps:
