--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,6 @@ workflows:
       - login-to-azure:
           context:
             - Shield
-          should_build: "$NEW_ENV"  
+          should_build: $NEW_ENV
           env_build: $BUILD_ENV
       
