Addign conditional deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
           name: privision environment
           command: |
             subscription_id=SUBSCRIPTION_ID_${BUILD_ENV^^}
-            subscription_id=`eval echo \$$subscription_id`
+            subscription_id=`eval \${$subscription_id}`
             ls -l
             if $NEW_ENV; then
               if [ "$BUILD_ENV" = "Dev" ]; then
