--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,18 +10,20 @@ jobs:
           command: |
             subscription_id=SUBSCRIPTION_ID_${BUILD_ENV^^}
             resource_group=RESOURCE_GROUP_NAME_${BUILD_ENV^^}
+            vnet_name=VNET_NAME_${BUILD_ENV^^}
             echo $resource_group
             eval "subscription_id=\${$subscription_id}"
             eval "resource_group=\${$resource_group}"
+            eval "vnet_name=\${$vnet-name}"
             echo $resource_group
             ls -l
             if $NEW_ENV; then
               if [ "$BUILD_ENV" = "Dev" ]; then
                 az deployment sub create --subscription $subscription_id --location $LOCATION --template-file Infrastructure-Code/ResourceGroup/resourcegroup.json --parameters rgLocation=$LOCATION rgName=$resource_group environment=$BUILD_ENV project=Shield
-                az deployment group create --resource-group $resource_group --subscription $subscription_id --template-file Infrastructure-Code/VirtualNetwork/virtualnetwork.json  --parameters rgLocation=$LOCATION environment=$BUILD_ENV project=Shield vnetName=$VNET_NAME_DEV vnetAddressCIDR=10.100.0.0/24 functionappSubnetName=function-subnet functionappSubnetCIDR=10.100.0.0/25 apimSubnetName=apim-subnet apimSubnetCIDR=10.100.0.128/25
+                az deployment group create --resource-group $resource_group --subscription $subscription_id --template-file Infrastructure-Code/VirtualNetwork/virtualnetwork.json  --parameters rgLocation=$LOCATION environment=$BUILD_ENV project=Shield vnetName=$vnet_name vnetAddressCIDR=10.100.0.0/24 functionappSubnetName=function-subnet functionappSubnetCIDR=10.100.0.0/25 apimSubnetName=apim-subnet apimSubnetCIDR=10.100.0.128/25
                 az deployment group create --resource-group $resource_group --subscription $subscription_id --template-file Infrastructure-Code/AppServicePlan/appserviceplan.json  --parameters hostingEnvironment="" numberOfWorkers=1 workerSizeId=3 workerSize=3 capacity=1 aspKind=linux environment=$BUILD_ENV project=Shield isReserved=true aspTier=PremiumV2 appServicePlanSku=P1V2 rgLocation=$LOCATION appServicePlanName=wap-eus-$BUILD_ENV-shield-functrak0001
-                az deployment group create --resource-group $resource_group --subscription $subscription_id --template-file Infrastructure-Code/AppService/functionapp.json  --parameters rgLocation=$LOCATION appName=fnp-eus-$BUILD_ENV-shield-functrak appServicePlanName=wap-eus-$BUILD_ENV-shield-functrak0001 subnetResourceId=/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$resource_group/providers/Microsoft.Network/virtualNetworks/$VNET_NAME_DEV/subnets/function-subnet environment=$BUILD_ENV project=Shield webappKind=functionapp,linux numberOfFuncs=1 funcStorageName=stgshield$BUILD_ENVfunc0001 insightName=inst-eus-$BUILD_ENV-shield-functrak
-                az deployment group create --resource-group $resource_group --subscription $subscription_id --template-file Infrastructure-Code/APIManagement/apimservice.json  --parameters name=apim-eus-$BUILD_ENV-alpha-0001 location=$LOCATION adminEmail=sampa.koley@hotmail.com orgName=Sensyne tier=Developer capacity=1 loggerName=apimlogger appInsightsId=microsoft.insights/components/inst-eus-$BUILD_ENV-shield-functrak0001 virtualNetworkType=External subnetId=/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$resource_group/providers/Microsoft.Network/virtualNetworks/$VNET_NAME_${${BUILD_ENV^^}}/subnets/apim-subnet environment=$BUILD_ENV project=Shield 
+                az deployment group create --resource-group $resource_group --subscription $subscription_id --template-file Infrastructure-Code/AppService/functionapp.json  --parameters rgLocation=$LOCATION appName=fnp-eus-$BUILD_ENV-shield-functrak appServicePlanName=wap-eus-$BUILD_ENV-shield-functrak0001 subnetResourceId=/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$resource_group/providers/Microsoft.Network/virtualNetworks/$vnet_name/subnets/function-subnet environment=$BUILD_ENV project=Shield webappKind=functionapp,linux numberOfFuncs=1 funcStorageName=stgshield$BUILD_ENVfunc0001 insightName=inst-eus-$BUILD_ENV-shield-functrak
+                az deployment group create --resource-group $resource_group --subscription $subscription_id --template-file Infrastructure-Code/APIManagement/apimservice.json  --parameters name=apim-eus-$BUILD_ENV-alpha-0001 location=$LOCATION adminEmail=sampa.koley@hotmail.com orgName=Sensyne tier=Developer capacity=1 loggerName=apimlogger appInsightsId=microsoft.insights/components/inst-eus-$BUILD_ENV-shield-functrak0001 virtualNetworkType=External subnetId=/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$resource_group/providers/Microsoft.Network/virtualNetworks/$vnet_name/subnets/apim-subnet environment=$BUILD_ENV project=Shield 
               fi  
             fi
 
