Changing app service plan tier

--- a/Infrastructure-Code/AppServicePlan/appserviceplan.json
+++ b/Infrastructure-Code/AppServicePlan/appserviceplan.json
@@ -47,6 +47,7 @@
         "aspTier": {
             "type": "string",
             "allowedValues": [
+				"Shared",
                 "Standard",
                 "Dynamic",
                 "PremiumV2",
