Changing app service plan tier

--- a/Infrastructure-Code/AppServicePlan/appserviceplan.json
+++ b/Infrastructure-Code/AppServicePlan/appserviceplan.json
@@ -44,6 +44,19 @@
                 "description": "Kind of app service plan"
             }
         },
+        "aspTier": {
+            "type": "string",
+            "allowedValues": [
+				"Shared",
+                "Standard",
+                "Dynamic",
+                "PremiumV2",
+                "ElasticPremium"
+            ],
+            "metadata": {
+                "description": "Tier of deployment"
+            }
+        },
         "isReserved": {
             "type": "bool",
             "metadata": {
@@ -88,6 +101,7 @@
                 "project": "[parameters('project')]"
             },
             "sku": {
+                "tier": "[parameters('aspTier')]",
                 "name": "[parameters('appServicePlanSku')]"
             },
             "kind": "[parameters('aspKind')]",
