--- a/Infrastructure-Code/AppService/functionapp.json
+++ b/Infrastructure-Code/AppService/functionapp.json
@@ -42,6 +42,7 @@
             "type": "string",
             "allowedValues": [
                 "app",
+				"functionapp",
                 "functionapp,linux"
             ],
             "metadata": {
